force-app/main/default/objects/Won_Lost_Drop__c/Won_Lost_Drop__c.object-meta.xml
<CustomObject>
    <description>수주/실주/중도종결 관리를 위한 Object</description>
    <label>Won/Lost/Drop</label>
    <nameField>
        <displayFormat>WLD-{YY}{MM}{DD}{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wons/Losts/Drops</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>