force-app/main/default/objects/Won_Lost_Drop__c/fields/Amount_formula__c.field-meta.xml
<CustomField>
    <fullName>Amount_formula__c</fullName>
    <formula>Amount__c/100000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount_formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>