force-app/main/default/objects/Won_Lost_Drop__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <formula>IF(Opportunity__c != NULL,Opportunity__r.CloseDate, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>