force-app/main/default/objects/Won_Lost_Drop__c/fields/Contract_Account__c.field-meta.xml
<CustomField>
    <fullName>Contract_Account__c</fullName>
    <formula>IF(Opportunity__c != NULL &amp;&amp; Opportunity__r.AccountId != NULL , Opportunity__r.Account.Name, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Account</label>
    <type>Text</type>
</CustomField>