force-app/main/default/objects/Won_Lost_Drop__c/fields/Date_of_occurrence__c.field-meta.xml
<CustomField>
    <fullName>Date_of_occurrence__c</fullName>
    <label>Date of occurrence</label>
    <required>true</required>
    <type>Date</type>
</CustomField>