force-app/main/default/objects/Won_Lost_Drop__c/fields/Date_of_occurrence_Formula__c.field-meta.xml
<CustomField>
    <fullName>Date_of_occurrence_Formula__c</fullName>
    <formula>TEXT(YEAR((Date_of_occurrence__c)))+ &quot;년 &quot; + TEXT(month(Date_of_occurrence__c)) + &quot;월&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of occurrence_Formula</label>
    <type>Text</type>
</CustomField>