force-app/main/default/objects/Won_Lost_Drop__c/fields/Month_of_Occ__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Occ__c</fullName>
    <formula>TEXT(YEAR(( Date_of_occurrence__c )))+ &quot;년 &quot; + TEXT(month(Date_of_occurrence__c)) + &quot;월&quot;</formula>
    <label>사유발생월</label>
    <type>Text</type>
</CustomField>