force-app/main/default/objects/Won_Lost_Drop__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Wons/Losts/Drops</relationshipLabel>
    <relationshipName>Wons_Losts_Drops</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>