force-app/main/default/objects/Won_Lost_Drop__c/fields/Opportunity_Code__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Code__c</fullName>
    <formula>IF(Opportunity__c != NULL,Opportunity__r.OpportunityCode__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Code</label>
    <type>Text</type>
</CustomField>