force-app/main/default/objects/Won_Lost_Drop__c/fields/Opportunity_Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Review_Type__c</fullName>
    <formula>IF(Opportunity__c != NULL,CASE(TEXT(Opportunity__r.Opportunity_Review_VRB_Type_Confirm__c),
&quot;10&quot;, &quot;전사 수주전략위원회&quot;,
&quot;20&quot;, &quot;사업부 수주전략위원회&quot;,
&quot;30&quot;, &quot;BO 점검회의&quot;,
&quot;40&quot;, &quot;사업불참&quot;,
NULL
), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Review Type</label>
    <type>Text</type>
</CustomField>