force-app/main/default/objects/Won_Lost_Drop__c/fields/Origin_Account__c.field-meta.xml
<CustomField>
    <fullName>Origin_Account__c</fullName>
    <formula>IF(Opportunity__c != NULL &amp;&amp; Opportunity__r.cOriginAcc__c != NULL ,Opportunity__r.cOriginAcc__r.Name, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Account</label>
    <type>Text</type>
</CustomField>