force-app/main/default/objects/Won_Lost_Drop__c/fields/Origin_Account_Type_of_Business_L2__c.field-meta.xml
<CustomField>
    <fullName>Origin_Account_Type_of_Business_L2__c</fullName>
    <formula>TEXT( Opportunity__r.cOriginAcc__r.mBizTypeL2Code__c )</formula>
    <label>Origin Account Type of Business L2</label>
    <type>Text</type>
</CustomField>