force-app/main/default/objects/Won_Lost_Drop__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <formula>Opportunity__r.Owner.LastName + &apos; &apos; + Opportunity__r.Owner.FirstName</formula>
    <label>Sales Rep.</label>
    <type>Text</type>
</CustomField>