force-app/main/default/objects/Won_Lost_Drop__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Opportunity__c != NULL,CASE(TEXT(Opportunity__r.OpportunityStatus__c),
&quot;E0002&quot;, &quot;in Progress&quot;,
&quot;E0003&quot;, &quot;Won&quot;,
&quot;E0004&quot;, &quot;Lost&quot;,
&quot;E0007&quot;, &quot;Drop&quot;,
&quot;E0010&quot;, &quot;Holding(Mig)&quot;,
&quot;E0008&quot;, &quot;Cleansed&quot;,
&quot;Error&quot;
), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>