force-app/main/default/objects/Won_Lost_Drop__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>IF(  TEXT(Won_Lost_Drop_Type__c) = &quot;Won&quot;, $Label.Won_Formula_label + &quot; &quot; + Opportunity__r.Name,  
IF(  TEXT(Won_Lost_Drop_Type__c) = &quot;Lost&quot;,$Label.Lost_Formula_label+ &quot; &quot; + Opportunity__r.Name, 
IF(  TEXT(Won_Lost_Drop_Type__c) = &quot;Drop&quot;,$Label.Drop_Formula_label+ &quot; &quot; + Opportunity__r.Name, &quot;&quot; )))</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>