force-app/main/default/objects/Won_Lost_Drop__c/fields/Won_Lost_Drop_reason__c.field-meta.xml
<CustomField>
    <fullName>Won_Lost_Drop_reason__c</fullName>
    <label>Won/Lost/Drop reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>