force-app/main/default/objects/Won_Lost_Drop__c/fields/Won_Lost_Drop_Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Won_Lost_Drop_Reason_Type__c</fullName>
    <label>Won/Lost/Drop Reason Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Won_Lost_Drop_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Cancellation by customer</fullName>
            </value>
            <value>
                <fullName>Unmet Profitability</fullName>
            </value>
            <value>
                <fullName>Insufficient offering capability</fullName>
            </value>
            <value>
                <fullName>Superiority of Capability</fullName>
            </value>
            <value>
                <fullName>Association with prior projects</fullName>
            </value>
            <value>
                <fullName>Association with partners</fullName>
            </value>
            <value>
                <fullName>Inferiority of Price Competitiveness</fullName>
            </value>
            <value>
                <fullName>Insufficient Responds to Customer Reuqest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>