force-app/main/default/objects/Won_Lost_Drop__c/fields/Won_Lost_Drop_Type__c.field-meta.xml
<CustomField>
    <fullName>Won_Lost_Drop_Type__c</fullName>
    <label>Won/Lost/Drop Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Drop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>